[package]
name = "let_me_know"
version = "0.1.0"
edition = "2021"

[dependencies]
lettre = "0.11.11"
dotenv = "0.15.0"
tokio = { version = "1.42.0", features = ["full"]}
chrono = "0.4.39"
rusqlite = "0.32.1"
reqwest = {version = "0.12.9", features = ["json"]}
serde = {version = "1.0.216", features = ["derive"]}
serde_json = "1.0.133"